syntax = "proto3";

package user;

service User {
    rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse) {};
}

message RegisterUserRequest {
    string username = 1;
    string password = 2;
}

message RegisterUserResponse {
    RegisteredUserResponseData data = 1;
}

message RegisteredUserResponseData {
    string token = 1;
}
